css/global.css
/* ... */
d-box {
	display: grid;
	grid-template-columns: auto 1fr;

	&:has(&) {
		position: relative;
	}

	&:not(:state(compact)) {
		/* Align text towards start */
		grid-template-rows: auto auto 1fr;
		
		d-box {
			position: absolute;
			font-size: 0.6em;
			font-family: "DeltaFont Condensed", var(--font);
			/* Reset full-size features */
			background-color: transparent;
			border-image: unset;
			border-inline-width: 0;
			margin: 0;
			width: max-content;
			/* Center content */
			align-items: center;
			
			d-sprite img { --size: 3.2em }

			d-text:first-of-type { margin-block-start: 0.5em }

			/* Specify placements (defaulting to bottom right) */
			&:not([place]), &:not([place~=bottom], [place~=top]),
			&[place~=bottom] { bottom: -2.4em }
			&:not([place]), &:not([place~=right], [place~=left]),
			&[place~=right] { right: 0 }
			&[place~=top] { top: -2.4em }
			&[place~=left] { left: 0 }
			&[place~=center-x] {
				left: 50%;
				transform: translateX(-50%);
			}
			&[place~=center-y] {
				top: 50%;
				transform: translateY(-50%);
			}
			&[place~=center] {
				left: 50%;
				top: 50%;
				transform: translate(-50%, -50%);
			}

			@media (min-width: 30rem) {
				&[place~=bottom][place~=center-x] { bottom: -1.7em }
				&[place~=top][place~=center-x] { top: -1.7em }
			}
		}
	}

	&:state(compact) & {
		grid-column: 2;
		margin-inline-start: 0;
		& d-speaker::before {
			content: "(";
			color: var(--white);
		}
		& > :last-child::after { content: ")" }
	}

	&:has(> d-box:first-child) {
		d-speaker::before,
		d-box > :last-child::after { content: unset }
	}
}
d-sprite {
	grid-row: 1 / span 3;
	grid-column: 1;
	d-box:state(compact) & { display: contents }

	/* Center sprite */
	d-box:not(:state(compact)) & {
		display: flex;
		align-items: center;
		margin-inline-end: 1ch;
	}

	img {
		--size: 4em;
		width: var(--size);
		height: var(--size);
		object-fit: contain;
		d-box:state(compact) & { display: none }
	}

	&[format=shop] {
		font-size: 1.2em;
		@media (max-width: 30rem) { font-size: 1em }

		img {
			display: block;
			width: 100%;
			margin: 0 0.5em;
			height: auto;
			object-position: center;
			max-width: var(--basewidth);
			max-height: 8em;
		}

		&:has(+ d-box[theme=shopleft]) img { max-width: calc(var(--basewidth) - 7.2em) }
		&:has(+ d-box[theme=shopright]) img { max-width: calc(var(--basewidth) - 14.2em) }

		body.compact & { display: none }
	}

}
d-speaker {
	color: var(--lightyellow);
	&::after { content: ":" }
	d-box:not(:state(compact)) & { display: none }
	d-box:state(compact) & {
		grid-column: 1;
		grid-row: 1 / span 3;
	}
}
d-text {
	grid-column: 2;
	line-height: 1.4;

	&[font=tiny] {
		font-family: "DeltaFont Tiny", var(--font);
		max-width: 61%;
	}

	&[font=sans] {
		font-family: "DeltaFont Comic Sans", var(--font);
	}

	&[asterisk] {
		padding-inline-start: 2ch;
		text-indent: -2ch;

		&::before {
			content: "*";
			margin-inline-end: 1ch;
		}
	}

	&[asterisk="Sweet" i],
	&[asterisk="Cap'n" i], &[asterisk="Capn" i],
	&[asterisk="K_K" i], &[asterisk="KK" i],
	&[asterisk="Happy" i], &[asterisk="Nice" i],
	&[asterisk="Mad" i], &[asterisk="Mean" i],
	&[asterisk="Sad" i], &[asterisk="Shy" i] {
		position: relative;
		padding-inline-start: 1.25em;
		text-indent: unset;

		&::before {
			position: absolute;
			left: 0;
			top: 0.15em;
			content: "";
			color: transparent;
			width: 1em;
			height: 1em;
			background: center / contain no-repeat;
		}
	}

	&:is([asterisk="Sweet" i])::before {
		background-image: url("../assets/images/faces/sweetcapncakes/sweet.gif");
		content: "(Sweet)";
	}
	&:is([asterisk="Cap'n" i], [asterisk="Capn" i])::before {
		background-image: url("../assets/images/faces/sweetcapncakes/capn.gif");
		content: "(Cap'n)";
	}
	&:is([asterisk="K_K" i], [asterisk="KK" i])::before {
		background-image: url("../assets/images/faces/sweetcapncakes/kk.gif");
		content: "(K_K)";
	}
	&:is([asterisk="Happy" i], [asterisk="Nice" i])::before {
		background-image: url("../assets/images/faces/clover/happy.png");
		content: "(Nice)";
	}
	&:is([asterisk="Mad" i], [asterisk="Mean" i])::before {
		background-image: url("../assets/images/faces/clover/mad.png");
		content: "(Mean)";
	}
	&:is([asterisk="Sad" i], [asterisk="Shy" i])::before {
		background-image: url("../assets/images/faces/clover/sad.png");
		content: "(Shy)";
	}

	img.inline {
		height: 1em;
		width: auto;
		vertical-align: text-bottom;
	}
}
d-choices {
	&:not(:state(compact)) {
		display: grid;
		--side-width: 5em;
		grid-template-columns: 1fr auto 1fr;
		padding: 0;
		align-items: center;
		position: relative;

		/* Heart-shaped selector icon
		To be displayed when none of the options are being considered or selected */
		&:not(:has(d-option:hover), :focus-within, :has([aria-expanded="true"])),
		&[noninteractive], &:state(forced):not(:has(d-option:hover), :focus-within) {
			&::after {
				content: "";
				background: url("../assets/images/heart.png") center / contain no-repeat;
				width: var(--size);
				height: var(--size);
				position: absolute;
				left: 9em;
				top: 1.7em;
				--size: 0.75em;
			}

			&[offset]::after { left: calc(9em + var(--offset)) }
		}
	}

	/* Option sizing WITHIN a menu (fullsize mode) */
	d-option {
		width: max-content;
		position: absolute;
		line-height: 1.2;

		/* Left/right */
		&[index="0"], &[index="1"] {
			top: 50%;
			transform: translateY(-50%);
		}
		/* Up/down */
		&[index="2"], &[index="3"] {
			left: 50%;
			transform: translateX(-50%);
		}

		&[index="0"] { left: 1.24em }
		&[index="1"] { right: 0.15em }
		&[index="2"] { top: -0.1em }
		&[index="3"] { bottom: -0.2em }
	}

	/* Asterisk marker */
	.conditional {
		position: absolute;
		left: calc(100% + 0.2em);
		top: 0;
	}

	/* In compact mode, all the options get moved alongside their tabs; hide the resulting empty menu */
	&:state(compact) { display: none }
}
/* ... */

